# pyusermanager

./: .gitignore  LICENSE  README.md  howtouse.py  setup.cfg  setup.py  some_bad_tests.py
docs/: LICENSE.rst  Readme.rst  ad_config_class.rst  conf.py  index.rst  pre-requireties.rst
py_login/: __init__.py  ad_config_class.py  auth_type_enum.py  config_class.py  custom_exceptions.py  data_classes.py  db_config_class.py  db_functions.py  ldap_stuff.py  test.py
pyusermanager/: __init__.py  _version.py  ad_config_class.py  auth_type_enum.py  authprovider_class.py  config_class.py  custom_exceptions.py  data_classes.py  db_config_class.py  db_functions.py  ldap_stuff.py  login_class.py  perms_class.py  token_class.py  user_funcs.py
pyusermanager/Config/: __init__.py  config_ad_class.py  config_base_class.py  config_db_class.py  config_general_class.py
pyusermanager/Config/db_providers/: __init__.py  prov_base.py  prov_cockroachdb.py  prov_mysql.py  prov_oracle.py  prov_postgresql.py  prov_sqlite.py
pyusermanager/Token/: __init__.py  token_activation_class.py  token_auth_class.py  token_base_class.py  token_reset_class.py
