[metadata]
name = pyusermanager
author = Ole Hannemann
author_email = cerberus885@gmail.com
url = https://github.com/Aurvandill137/pyusermanager
description = Some Functions to manage a User Database and do stuff with it!
version = 1.0.0
classifiers =
    Programming Language :: Python :: 3.0
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = pyusermanager
install_requires =
    setuptools>=45.0
    pony
    python-ldap
    bcrypt