[metadata]
name = pyusermanager
author = Ole Hannemann
author_email = cerberus885@gmail.com
url = https://github.com/Aurvandill/pyusermanager
description = Some Functions to manage a User Database and do stuff with it!

long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License


[options]
packages = pyusermanager, pyusermanager.Token, pyusermanager.Config, pyusermanager.Config.db_providers
install_requires =
    setuptools>=45.0
    pony
    python-ldap
    bcrypt
